# thyme

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  includeImportStd.cmake  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt
app/src/: main.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
thyme/: CMakeLists.txt  glmCppModuleLib.cmake  vmaHppModuleLib.cmake  vulkanCppModuleLib.cmake
thyme/core/: CMakeLists.txt  application.cpp  application.cppm  engine.cpp  engine.cppm  events.cppm  key_codes.cppm  logger.cppm  mouse_codes.cppm  utils.cppm
thyme/include/: lib.hpp  logger.hpp  pch.hpp
thyme/include/thyme/: pch.hpp  version.hpp  version.hpp.in
thyme/include/thyme/core/: application.cppm  application.hpp  common_structs.cppm  common_structs.hpp  core.cppm  core.hpp  engine.cppm  engine.hpp  event.cppm  event.hpp  key_codes.cppm  key_codes.hpp  layer.cppm  layer.hpp  layer_stack.cppm  layer_stack.hpp  logger.hpp  mouse_codes.cppm  mouse_codes.hpp  platform_context.cppm  platform_context.hpp  renderer.cppm  renderer.hpp  texture.hpp  utils.cppm  utils.hpp  window.cppm  window.hpp
thyme/include/thyme/platform/: glfw_vulkan_platform_context.cppm  glfw_vulkan_platform_context.hpp  glfw_window.cppm  glfw_window.hpp  imgui_context.cppm  imgui_context.hpp  vulkan_device_manager.hpp  vulkan_renderer.cppm  vulkan_renderer.hpp
thyme/include/thyme/platform/shaders/glsl/: triangle.frag  triangle.vert
thyme/include/thyme/platform/shaders/spv/: triangle.vert.spv
thyme/include/thyme/platform/vulkan/: graphic_pipeline.cppm  graphic_pipeline.hpp  gui.hpp  model.hpp  renderer.cppm  renderer.hpp  shader.cppm  shader.hpp  swapchain.hpp  texture.hpp  uniform_buffer_object.hpp  utils.cppm  utils.hpp  vulkan.cppm  vulkan.hpp  vulkan_buffer.hpp  vulkan_command_buffers.hpp  vulkan_device.hpp  vulkan_graphic_context.hpp  vulkan_layer.cppm  vulkan_layer.hpp  vulkan_render_target.hpp  vulkan_swapchain.hpp  vulkan_texture.hpp
thyme/include/thyme/renderer/: model.hpp  models.cppm  models.hpp  renderer.hpp  structs.hpp  swapchain.hpp  texture.hpp
thyme/include/thyme/scene/: camera.hpp  model.hpp  texture.hpp  texture_data.hpp  transformation.hpp  vulkan_texture.hpp
thyme/modules/: CMakeLists.txt  glfw.cppm  glslang.cppm  imgui.cppm  json.cppm  slang.cppm  spdlog.cppm  stb_image.cppm
thyme/platform/: CMakeLists.txt  imgui_context.cppm  platform_context.cppm  window.cppm  window_event_handler.cppm  window_settings.cpp  window_settings.cppm
thyme/platform/glfw/: CMakeLists.txt  glfw.cppm  glfw_context.cppm  glfw_window.cpp  glfw_window.cppm
thyme/render_system/: CMakeLists.txt  device.cppm  framework.cppm  framework_factory.cppm  render_graph.cpp  render_graph.cppm  renderer.cpp  renderer.cppm  swap_chain.cppm
thyme/render_system/passes/: CMakeLists.txt  mypass.cppm  passes.cppm
thyme/render_system/vulkan/: CMakeLists.txt  gui.cppm  vulkan_backend.cppm  vulkan_buffer.cpp  vulkan_buffer.cppm  vulkan_command_buffers.cpp  vulkan_command_buffers.cppm  vulkan_debug.cppm  vulkan_device.cpp  vulkan_device.cppm  vulkan_framework.cpp  vulkan_framework.cppm  vulkan_graphic_context.cppm  vulkan_graphic_pipeline.cpp  vulkan_graphic_pipeline.cppm  vulkan_model.cpp  vulkan_model.cppm  vulkan_renderer.cpp  vulkan_renderer.cppm  vulkan_shader.cpp  vulkan_shader.cppm  vulkan_swap_chain.cpp  vulkan_swap_chain.cppm  vulkan_swapchain.cpp  vulkan_swapchain.cppm  vulkan_texture.cpp  vulkan_texture.cppm  vulkan_uniform_buffer_object.cppm  vulkan_utils.cppm
thyme/scene/: CMakeLists.txt  camera.cpp  camera.cppm  model.cppm  texture_data.cppm  transformation.cppm
thyme/shaders/glsl/: triangle.vert
thyme/shaders/slang/: compute.slang  triangle.slang  triangle2.slang
thyme/src/: lib.cpp  logger.cpp
thyme/src/core/: application.cpp  engine.cpp  logger.cpp  texture.cpp  utils.cpp
thyme/src/platform/: glfw_window.cpp  vulkan_renderer.cpp
thyme/src/platform/vulkan/: graphic_pipeline.cpp  gui.cpp  model.cpp  renderer.cpp  shader.cpp  swapchain.cpp  texture.cpp  utils.cpp  vulkan_buffer.cpp  vulkan_command_buffers.cpp  vulkan_device.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp
thyme/src/scene/: model.cpp  texture.cpp  transformation.cpp
thyme/ui/: CMakeLists.txt  gui.cppm
